@@ -4,6 +4,11 @@
   src: url('Quicksand.otf');
 }
 
+#dropLogin{
+    margin-left: 80%;
+    margin-top: 9%;
+}
+
 .f-header{
     width: 100%;
     height: 120px;
@@ -52,20 +57,20 @@
 
 #header-minor,
 #header-major {
-    position: relative;
+    position: absolute;
     color: #fff;
     display: block;
     font-family: 'Quicksand';
 }
 #header-minor {
     width: 550px;
-    top: 18px;
-    left: 25px
+    margin-top: 30px;
+    margin-left: 120px;
 }
 #header-major {
     width: 700px;
-    top: 0px;
-    left: 20px;
+    margin-top: 40px;
+    margin-left: 120px;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7)
 }
 
@@ -263,6 +268,12 @@ footer#main-footer {
     box-shadow: 0px 0px 0px #ffffff;
 }
 
+#myModal-alt{
+    background: rgba(254, 254, 254, 0);
+    border: rgba(254, 254, 254, 0);
+    box-shadow: 0px 0px 0px #ffffff;
+}
+
 /*THIS IS FOR STUDENT TESTIMONIALS*/
 .event {
   padding: 1rem 1rem 1rem 0;
@@ -317,8 +328,14 @@ footer#main-footer {
     h5#header-minor{
         font-size: 10px;
     }
+}
+
+@media only screen and (max-width: 46.875em) { 
     .super-small-screen{
         font-size: 18px;
+    }
+    .superx2-small-screen{
+        font-size: 15px;
     }
 }
 
@@ -326,6 +343,14 @@ footer#main-footer {
 @media only screen and (max-width: 50.9375em) { 
     .hide-when-not-fit{
         visibility: hidden;
+    }
+}
+
+/*hide search in navbar when it doesnt fit*/
+@media only screen and (max-width: 62.5em) { 
+    .hide-in-bulletin{
+        visibility: hidden;
+        position: absolute;
     }
 }
 
@@ -367,14 +392,14 @@ footer#main-footer {
     }
     #header-minor {
         width: 550px;
-        margin-top: -15px;
-        margin-left: -15px;
+        margin: auto;
+        margin-top: 60px;
 
     }
     #header-major {
         width: 700px;
-        margin-top: -10px;
-        margin-left: -15px;
+        margin: auto;
+        margin-top:  75px;
         text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7)
     }
 
@@ -468,7 +493,7 @@ footer#main-footer {
 
 /*-------LOGIN STARTS HERE -------*/
 
-.login-block {
+.login-block{
     width: 250px;
     padding: 20px;
     background: #fff;
@@ -476,6 +501,10 @@ footer#main-footer {
     border-top: 5px solid #333333;
     border-bottom: 5px solid #333333;
     margin: 0 auto;
+} 
+
+.largeLogIn{
+    width: 80%;
 }
 
 .login-block h1 {
